# eas5870-betatest-hw4-starter

./: README.md  pyproject.toml  tts_pipeline.py
app/: service.py
app/gradio/: main_ui.py  mt.py  tts.py
